todo-app/kubernetes/base/gateway/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-app-route
spec:
  parentRefs:
    - name: todo-app-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-svc
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /api/image
      backendRefs:
        - name: image-service-svc
          port: 2345

    - matches:
        - path:
            type: PathPrefix
            value: /api/todos
      backendRefs:
        - name: todo-service-svc
          port: 2346
